--- a/public/ex2/info.html
+++ b/public/ex2/info.html
@@ -24,7 +24,56 @@
         </div>
         <script>
             function getData() {
- 
+                const value = document.getElementById("type").value;
+                const limit = document.getElementById("limit").value;
+                async function asyncCall(value, limit) {
+                    try{
+                        const response = await axios.get("/data", {
+                            params:{
+                                "type": value,
+                                "limit":limit
+                            }
+                        });
+                        generateTable(response.data)
+                    }
+                    catch{
+                        error => console.log(error);
+                    }
+                }
+                function generateTable(dataObj){
+                    const resultDivElem = document.getElementById("result");
+                    while(resultDivElem.firstChild){
+                        resultDivElem.remove();
+                    } 
+                    const h2Elem = document.createElement("h2");
+                    h2Elem.innerText = dataObj["type"];
+                    resultDivElem.appendChild(h2Elem);
+                }
+                const tableElem = document.createElement("table");
+                tableElem.className = "table";
+                const tBodyElem = document.createElement("tbody");
+                const trElem = document.createElement("tr");
+                const tableHeadings = Object.keys(dataObj["records"][0]);
+                for (const headingVal of tableHeadings){
+                    const thElem = document.createElement("th");
+                    thElem.innerText = headingVal;
+                    trElem.appendChild(thElem);
+                }
+                tBodyElem.appendChild(trElem);
+                tableElem.appendChild(tBodyElem);
+                resultDivElem.appendChild(tableElem);
+                for (let i=0; i<dataObj["records"].length; i++){
+                    const trElem = document.createElement("tr");
+                    for  (let j=0; j<tableHeadings.length; j++){
+                        const propVal = dataObj["records"][1][tableHeadings[j]];
+                        const tdElem = document.getElementById("td");
+                        tdElem.innerText = propVal;
+                        trElem.append(tdElem);
+                    }
+                    tableElem.appendChild(trElem);
+                    resultDivElem.appendChild(tableElem)
+                    
+                }
             }
 
         </script>
