--- a/public/ex2/info.html
+++ b/public/ex2/info.html
@@ -23,59 +23,73 @@
 
         </div>
         <script>
-            function getData() {
-                const value = document.getElementById("type").value;
-                const limit = document.getElementById("limit").value;
-                async function asyncCall(value, limit) {
-                    try{
-                        const response = await axios.get("/data", {
-                            params:{
-                                "type": value,
-                                "limit":limit
-                            }
-                        });
-                        generateTable(response.data)
-                    }
-                    catch{
-                        error => console.log(error);
-                    }
+            async function getData() {
+                const typeVal = document.getElementById("type").value;
+                const limitVal = document.getElementById("limit").value;
+                try {
+                    const response = await axios.get("/data", {
+                        params: {
+                            "type": typeVal,
+                            "limit": limitVal
+                        }
+                    });
+                    generateTable(response.data);
+                } catch (error) {
+                    console.log(error);
                 }
-                function generateTable(dataObj){
-                    const resultDivElem = document.getElementById("result");
-                    while(resultDivElem.firstChild){
-                        resultDivElem.remove();
-                    } 
-                    const h2Elem = document.createElement("h2");
-                    h2Elem.innerText = dataObj["type"];
-                    resultDivElem.appendChild(h2Elem);
+            }
+
+            function generateTable(dataObj) {
+                const resultDivElem = document.getElementById("result");
+                while (resultDivElem.firstChild) {
+                    resultDivElem.firstChild.remove();
                 }
+                //create h2 element
+                const h2Elem = document.createElement("h2");
+                h2Elem.innerText = dataObj["type"];
+                resultDivElem.appendChild(h2Elem);
+
+                //create table element
+                /*
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        <tr>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+                */
                 const tableElem = document.createElement("table");
                 tableElem.className = "table";
                 const tBodyElem = document.createElement("tbody");
+                //create table heading elements
                 const trElem = document.createElement("tr");
-                const tableHeadings = Object.keys(dataObj["records"][0]);
-                for (const headingVal of tableHeadings){
+                const tblHeadings = Object.keys(dataObj["records"][0]);
+                for (const headingVal of tblHeadings) { //["name", "price"]
                     const thElem = document.createElement("th");
                     thElem.innerText = headingVal;
                     trElem.appendChild(thElem);
                 }
                 tBodyElem.appendChild(trElem);
-                tableElem.appendChild(tBodyElem);
-                resultDivElem.appendChild(tableElem);
-                for (let i=0; i<dataObj["records"].length; i++){
+                
+                //create the table body elements
+                //loop through the elements in records array
+                for (let i=0; i<dataObj["records"].length; i++) {
                     const trElem = document.createElement("tr");
-                    for  (let j=0; j<tableHeadings.length; j++){
-                        const propVal = dataObj["records"][1][tableHeadings[j]];
-                        const tdElem = document.getElementById("td");
+                    for (let j=0; j<tblHeadings.length; j++) {
+                        const propVal = dataObj["records"][i][tblHeadings[j]];
+                        const tdElem = document.createElement("td");
                         tdElem.innerText = propVal;
                         trElem.append(tdElem);
                     }
-                    tableElem.appendChild(trElem);
-                    resultDivElem.appendChild(tableElem)
-                    
+                    tBodyElem.appendChild(trElem);
                 }
+                tableElem.appendChild(tBodyElem);
+                resultDivElem.appendChild(tableElem);
             }
-
         </script>
 </body>
 </html>
